read several sentences and say again

--- a/use_gpt.ipynb
+++ b/use_gpt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,10 +168,11 @@
    "source": [
     "ckpt_path = os.path.join(out_dir, 'ckpt.pt')\n",
     "checkpoint = torch.load(ckpt_path, map_location=device)\n",
-    "evolver_config = MemoryRobertaConfig(vocab_size=checkpoint['model_args']['vocab_size'] + 20, num_hidden_layers=6,\n",
-    "                                     num_attention_heads=12, hidden_size=768, max_position_embeddings=512, intermediate_size=3072,\n",
-    "                                     pad_token_id=0, gpt2_token_id_offset=20, num_memory=10,\n",
-    "                                     num_target_model_layer=12)\n",
+    "# evolver_config = MemoryRobertaConfig(vocab_size=checkpoint['model_args']['vocab_size'] + 20, num_hidden_layers=6,\n",
+    "#                                      num_attention_heads=12, hidden_size=768, max_position_embeddings=512, intermediate_size=3072,\n",
+    "#                                      pad_token_id=0, gpt2_token_id_offset=20, num_memory=10,\n",
+    "#                                      num_target_model_layer=12)\n",
+    "evolver_config = checkpoint['evolver_config']\n",
     "evolver_model = MemoryRobertaModel(evolver_config)\n",
     "state_dict = checkpoint['evolver_model']\n",
     "unwanted_prefix = '_orig_mod.'\n",
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +230,7 @@
        ")"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,20 +242,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[ 1.1861,  1.1499,  0.1170,  ..., -0.6563, -0.3641, -0.5765],\n",
-      "         [ 1.1784,  1.1462,  0.1218,  ..., -0.6369, -0.3493, -0.5873],\n",
-      "         [ 1.2003,  1.1558,  0.1102,  ..., -0.6811, -0.3793, -0.5673],\n",
+      "torch.Size([1, 287])\n",
+      "tensor([[[ 0.3428,  0.8077, -0.6628,  ..., -1.3418,  1.2402, -0.4133],\n",
+      "         [ 0.7253,  0.0558, -0.9824,  ...,  0.7853,  0.8069, -0.2527],\n",
+      "         [ 1.1614,  0.0326, -0.4679,  ..., -3.4568,  1.5374, -0.7046],\n",
       "         ...,\n",
-      "         [ 1.1719,  1.1428,  0.1269,  ..., -0.6271, -0.3427, -0.5891],\n",
-      "         [ 1.1809,  1.1463,  0.1191,  ..., -0.6475, -0.3576, -0.5813],\n",
-      "         [ 1.1782,  1.1464,  0.1197,  ..., -0.6444, -0.3568, -0.5823]]],\n",
+      "         [-0.7374,  0.7302, -2.8847,  ..., -1.8435,  1.8640, -0.7880],\n",
+      "         [-0.5549,  0.8206, -2.1583,  ..., -0.7127,  1.0139,  0.4985],\n",
+      "         [ 0.6094, -0.0893, -1.4557,  ..., -0.9105,  0.3999, -1.4746]]],\n",
       "       device='cuda:3', grad_fn=<SliceBackward0>)\n",
       "torch.Size([12, 1, 10, 768])\n"
      ]
@@ -263,14 +265,17 @@
    "source": [
     "# generate input memory\n",
     "\n",
-    "context = [\"i am a handsome chinese boy. I live in Beijing now.\", \"i am a handsome chinese boy. I live in Beijing now.\", \"i am a handsome chinese boy. I live in Beijing now.\", \"i am a handsome chinese boy. I live in Beijing now.\"]\n",
-    "# context = [\"i am a handsome chinese boy. I live in Beijing now.\"]\n",
+    "# context = [\"i am a handsome chinese boy. I live in Beijing now.\", \"i am a handsome chinese boy. I live in Beijing now.\", \"i am a handsome chinese boy. I live in Beijing now.\", \"i am a handsome chinese boy. I live in Beijing now.\"]\n",
+    "context = [\"Fine-tuning large pre-trained language models on downstream tasks has become the de-facto learning paradigm in NLP. However, conventional approaches fine-tune all the parameters of the pre-trained model, which becomes prohibitive as the model size and the number of tasks grow. Recent work has proposed a variety of parameter-efficient transfer learning methods that only fine-tune a small number of (extra) parameters to attain strong performance. While effective, the critical ingredients for success and the connections among the various methods are poorly understood. In this paper, we break down the design of state-of-the-art parameter-efficient transfer learning methods and present a unified framework that establishes connections between them. Specifically, we re-frame them as modifications to specific hidden states in pre-trained models, and define a set of design dimensions along which different methods vary, such as the function to compute the modification and the position to apply the modification. Through comprehensive empirical studies across machine translation, text summarization, language understanding, and text classification benchmarks, we utilize the unified view to identify important design choices in previous methods. Furthermore, our unified framework enables the transfer of design elements across different approaches, and as a result we are able to instantiate new parameter-efficient fine-tuning methods that tune less parameters than previous methods while being more effective, achieving comparable results to fine-tuning all parameters on all four tasks.\"]\n",
     "# context = [\"i am a handsome chinese boy.\"]\n",
     "\n",
     "encoded_context = []\n",
     "\n",
     "for c in context:\n",
-    "    encoded_context.append(torch.tensor(encode(c))[None, ...].to(device) + 20)\n",
+    "    encoded_context.append(torch.tensor(encode(c))[None, ...].to(device) + evolver_config.gpt2_token_id_offset)\n",
+    "    # encoded_context.append(torch.tensor(encode(c))[None, ...].to(device))\n",
+    "\n",
+    "print(encoded_context[0].shape)\n",
     "\n",
     "input_memory = None\n",
     "for index, ec in enumerate(encoded_context):\n",
@@ -297,29 +302,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 72, 716, 257, 220]], device='cuda:3')\n",
-      "i am a vernacular the world over. . The major media doesn’t do the business of the world. The Internet is a fucking internet. I don’t care how many people I know have commented on this. My information is in the public domain. I don’t care. It’s my life. I don’t care. I just need to be polite and helpful. I do not care about personal info, I’m absolutely fine with that. When I’m just beginning, I want to get a nudge. I want to let people know how they’ll be able to decide what they want and what they want to see of me.\n",
+      "tensor([[34389,    12, 28286,   278,  1588,   662,    12, 35311,  3303,  4981,\n",
+      "           319, 33218,  8861,   468,  1716,   262,   390,    12, 22584,    78,\n",
+      "          4673, 23457,   287,   399, 19930,    13,  2102,    11, 10224, 10581,\n",
+      "          3734,    12,    83,  1726,   477,   262,   220]], device='cuda:3')\n",
+      "Fine-tuning large pre-trained language models on downstream tasks has become the de-facto learning paradigm in NLP. However, conventional approaches fine-tune all the 𝔮𝔮𝔮𝔮 𝔮𝔮𝔮 𝔮𝔮𝔮 𝔮𝔮𝔮 𝔯𝔮𝔮 𝔮𝔮𝔮𝔮 𝔮𝔮𝔮𝔮 𝔮𝔮𝔮 𝔮𝔮𝔮 𝔮𝔮𝔮 𝔮𝔮𝔮𝔮𝔮 𝔮𝔮𝔮𝔮 𝔮𝔮𝔮𝔮, with the exception of all the NLP mechanisms that have been compared in this paper. All these mechanisms are essentially identical, however, and, as a consequence, all work on the same conceptual interface. Increasingly, all computational approaches to understanding problem problem solving have a large, simplified, and non-trivial number of experimental data points across all time scales, with the fewest computationally intensive computational tasks, as discussed below. A number of studies have examined the differences between computational methods that increase complexity, or even reduce it, throughout the entire picture of the problem, as well as between computational methods that narrow down the range of possible tasks. As a result, a significant number of studies have utilized these computational approaches as a means of finding the optimal task, while all these approaches have performed only minimal work. All the experiments in this section were conducted in parallel, and all of the time scale datasets are fully available on the NLP cloud. Across the study spans all different time scales, with all the information about the variables being available on all the time scales, over all the time scales, over all the time scales. All of the studies, however, have employed a multiple-task approach as a means of discovering the optimal task on all the time scales, with all of the modeling tasks being performed only on a single task, and all the modeling tasks being performed only on one task, as opposed to all the time scales and all the time scales plus the individual methods. All of the datasets are fully available on the NLP cloud. All of the time scales are fully available on the NLP cloud, each requiring a different modeling process and which are all available on the NLP cloud. All of the time scales are fully available\n",
       "---------------\n",
-      "i am a ursa. As a saur on my own I am not raved about, but I am pleased with how well it is going. I got a 9.5 on a custom motorcycle and the new one is a 9.9. The bike is good so far, and the engine is quiet, but I am not a fan of the turbocharger on the new bike. The throttle is pretty much the same as the old one, with all fours, but they are a bit out of balance. The throttle is good so far, and the fuel gauge is pretty good, so far. The bike is very quiet, but I am a bit worried. I have to be at the shop for a break now before it gets to the 10:00 mark. The bike is brand new, and I am getting pretty beat up.\n",
-      "\n",
-      "Rated 5 out of 5 by P. from I am glad I bought my bike. It is a good bike, easy to set up, and I was looking to get the most efficient ride on the highway. It is much quieter than the old one, and the new one has a raised front section that I have never seen before. When I first rode it I thought it would be a 5.6, but it is for sale at $395, so I will wait and see. But then I started to notice its not good, where the revs are unbelievable, where the throttle is super low, and the pokes are a bit off. Now that I am done with the new one, it is the best bike I have ever bought.\n",
-      "\n",
-      "Rated 5 out of 5 by Yol from Love it This is the best bike I have ever ridden. I am a very satisfied customer. I found my new bike at a dealership and decided to buy it to see what it can do. I am really looking forward to the ability to ride a new bike in the future.\n",
-      "\n",
-      "Rated 5 out of 5 by Fela from A great bike My new bike arrived in two days. It is a very comfortable bike. My problem was that the brake pedal stops working after a few days, therefore, I ordered a new brake pedal. I got the bike from the dealership and it looks great. It is not very quiet and I am happy my car switched to new. I also have a new front fork for the new bike, it is a bit more quiet when I am not riding on the highway.\n",
+      "Fine-tuning large pre-trained language models on downstream tasks has become the de-facto learning paradigm in NLP. However, conventional approaches fine-tune all the vernacular languages down to a level representing the grammars of the world. The present study examines the impact of this approach on the semantics of a language. We find that many novice languages, including Spanish, French, and many other languages, have a very low level of functional theory. We chose to study the semantics of a language because, as a result of its modularity, the semantics of the language has broad applicability across specific subjects. Consequently, to our knowledge, we have not used language-structured generative ML in linguistics. While the semantics of many languages are very different, the underlying principles are the same. We have considered two domains: grammatical semantics and syntactic semantics. We also examined the semanticism of grammatical semantics, based on the current empirical evidence. Notably, we found that semanticism-based grammars are able to follow the semantics of language in a variety of constructs, including non-verbal language constructs, noun-verb categorization, and conjunction logic. In addition, we found that over all domains, semantic semantics is significantly more appropriate in all domains than syntactic semantics, regardless of whether grammatical semantics followed a specific syntactic construction. This means that an instrument of comparison is being used to generate grammars for the language. In addition, semantic semantics is now able to generate the syntactic structure of a language as a whole. Furthermore, all language generative ML tools are available on all domains in a single language. Furthermore, the accuracy of a language's syntactic structure depends on the syntactic semantics of its object. This ability has the potential to enable an interpreter to easily derive grammatical semantics. In addition, all language generative ML tools can be trained on the semantics of all current languages because they generate them in a single-step process that is as fast as normal ML. Furthermore, all language generative ML tools can be trained on the semantics of all current languages, with the ability to rapidly generate all languages of the same semantics. All of this is a substantial improvement over the current approach to grammatical semantics. All of this is especially important since we have analyzed all languages across all domains to reliably generate grammars for all languages. We have also treated all domains of the language generative ML framework in the same way as we did all classification schemes. Moreover, all language generative ML tools can be trained on all languages as long as all, basic, and syntactic semantics, in all domains, follow\n",
       "---------------\n"
      ]
     }
    ],
    "source": [
-    "question = \"i am a \"\n",
+    "# question = \"i am a handsome chinese\"\n",
+    "question = \"Fine-tuning large pre-trained language models on downstream tasks has become the de-facto learning paradigm in NLP. However, conventional approaches fine-tune all the \"\n",
     "\n",
     "start_ids = encode(start + question)\n",
     "x = torch.tensor(start_ids, dtype=torch.long, device=device)[None, ...]\n",
@@ -345,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +364,7 @@
        "'i am a<|endoftext|> chinese boy. I live'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
