--- a/use_predict_model.ipynb
+++ b/use_predict_model.ipynb
@@ -2,9 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "===================================BUG REPORT===================================\n",
+      "Welcome to bitsandbytes. For bug reports, please run\n",
+      "\n",
+      "python -m bitsandbytes\n",
+      "\n",
+      " and submit this information together with your error trace to: https://github.com/TimDettmers/bitsandbytes/issues\n",
+      "================================================================================\n",
+      "CUDA SETUP: CUDA runtime path found: /data/yuanhang/anaconda3/envs/moe/lib/libcudart.so.11.0\n",
+      "CUDA SETUP: Highest compute capability among GPUs detected: 8.0\n",
+      "CUDA SETUP: Detected CUDA version 117\n",
+      "CUDA SETUP: Loading binary /data/yuanhang/anaconda3/envs/moe/lib/python3.8/site-packages/bitsandbytes/libbitsandbytes_cuda117.so...\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pickle\n",
@@ -21,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,13 +87,7 @@
       "Initializing from OpenAI GPT-2 weights: gpt2\n",
       "loading weights from pretrained gpt: gpt2\n",
       "forcing vocab_size=50257, block_size=1024, bias=True\n",
-      "overriding dropout rate to 0.0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "overriding dropout rate to 0.0\n",
       "number of parameters: 123.65M\n",
       "[27, 91, 437, 1659, 5239, 91, 29]\n",
       "[50256]\n"
@@ -126,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +185,7 @@
        ")"
       ]
      },
-     "execution_count": 415,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -270,68 +283,40 @@
      "output_type": "stream",
      "text": [
       "tensor([[ 464,  717, 1438,  286,  262, 1459, 1294, 1893,  318,  366]],\n",
-      "       device='cuda:0')\n",
+      "       device='cuda:0')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "The first name of the current US president is \"Barack Obama.\"\n",
       "\n",
-      "The first name of the current US president is \"Barack Obama.\"\n",
+      "The first name of the current US president is \"Barack Obama.\" The first name of the current US president is \"Barack Obama.\"\n",
       "\n",
-      "The first name of the current US president is \"Barack Obama.\"\n",
+      "The first name of the current US president is \"Barack Obama.\" The first name of the current US president is \"Barack Obama.\"\n",
       "\n",
-      "The first name of the current US president is \"Barack Obama.\"\n",
+      "The first name of the current US president is \"Barack Obama.\" The first name of the current US president is \"Barack Obama.\"\n",
       "\n",
-      "The first name of the current US president is \"Barack Obama.\"\n",
+      "The first name of the current US president is \"Barack Obama.\" The first name of the current US president is \"Barack Obama.\"\n",
       "\n",
-      "The first name of the current US president is \"Barack Obama.\"\n",
+      "The first name of the current US president is \"Barack Obama.\" The first name of the current US president is \"Barack Obama.\"\n",
       "\n",
-      "The first name of the current US president is \"Barack Obama.\"\n",
+      "The first name of the current US president is \"Barack Obama.\" The first name of the current US president is \"Barack Obama.\"\n",
       "\n",
-      "The first name of the current US president is \"Barack Obama.\"\n",
-      "\n",
-      "The first name of the current US president is \"Barack Obama.\"\n",
-      "\n",
-      "The first name of the current US president is \"Barack Obama.\"\n",
-      "\n",
-      "The first name of the current US president is \"Barack Obama.\"\n",
-      "\n",
-      "The first name of the current US president is \"Barack Obama.\"\n",
-      "\n",
-      "The first name of the current US president\n",
+      "The first name of\n",
       "---------------\n",
       "===============================================================\n",
       "tensor([[ 464,  717, 1438,  286,  262, 1459, 1294, 1893,  318,  366]],\n",
       "       device='cuda:0')\n",
-      "The first name of the current US president is \"Joe Biden.\"\n",
+      "The first name of the current US president is \"Biden.\"\n",
       "\n",
-      "In the wake of the tragic events in Charlottesville, Virginia, Biden was the first African-American to be elected to the US Senate. He was the first African-American to be elected to the US House of Representatives. He was the first African-American to be elected to the US Senate. He was the first African-American to be elected to the US House of Representatives. He was the first African-American to be elected to the US Senate. He was the first African-American to be elected to the US House of Representatives. He was the first African-American to be elected to the US House of Representatives. He was the first African-American to be elected to the US House of Representatives. He was the first African-American to be elected to the US House of Representatives. He was the first African-American to be elected to the US House of Representatives. He was the first African-American to be\n",
+      "Biden is the author of several books, including \"The American Dream: The Rise of the American Dream,\" \"The American Dream: The Rise of the American Dream,\" and \"The American Dream: The Rise of the American Dream.\" He is the author of \"The American Dream: The Rise of the American Dream,\" \"The American Dream: The Rise of the American Dream,\" and \"The American Dream: The Rise of the American Dream.\" He is the author of \"The American Dream: The Rise of the American Dream,\" \"The American Dream: The Rise of the American Dream,\" and \"The American Dream: The Rise of the American Dream.\" He is the author of \"The American Dream: The Rise of the American Dream,\" \"The American Dream: The Rise of the American Dream,\" and \"The American Dream: The Rise of the American Dream.\" He is the author of \"The American Dream: The Rise\n",
       "---------------\n",
       "===============================================================\n",
       "tensor([[ 464,  717, 1438,  286,  262, 1459, 1294, 1893,  318,  366]],\n",
       "       device='cuda:0')\n",
-      "The first name of the current US president is \"Barack Obama.\"\n",
-      "\n",
-      "The first name of the current US president is \"Barack Obama.\"\n",
-      "\n",
-      "The first name of the current US president is \"Barack Obama.\"\n",
-      "\n",
-      "The first name of the current US president is \"Barack Obama.\"\n",
-      "\n",
-      "The first name of the current US president is \"Barack Obama.\"\n",
-      "\n",
-      "The first name of the current US president is \"Barack Obama.\"\n",
-      "\n",
-      "The first name of the current US president is \"Barack Obama.\"\n",
-      "\n",
-      "The first name of the current US president is \"Barack Obama.\"\n",
-      "\n",
-      "The first name of the current US president is \"Barack Obama.\"\n",
-      "\n",
-      "The first name of the current US president is \"Barack Obama.\"\n",
-      "\n",
-      "The first name of the current US president is \"Barack Obama.\"\n",
-      "\n",
-      "The first name of the current US president is \"Barack Obama.\"\n",
-      "\n",
-      "The first name of the current US president\n",
+      "The first name of the current US president is \"Barack Obama.\" The second name is \"Barack Obama.\" The third name is \"Barack Obama.\" The fourth name is \"Barack Obama.\" The fifth name is \"Barack Obama.\" The sixth name is \"Barack Obama.\" The seventh name is \"Barack Obama.\" The eighth name is \"Barack Obama.\" The ninth name is \"Barack Obama.\" The tenth name is \"Barack Obama.\" The eleventh name is \"Barack Obama.\" The twelfth name is \"Barack Obama.\" The thirteenth name is \"Barack Obama.\" The thirteenth name is \"Barack Obama.\" The thirteenth name is \"Barack Obama.\" The thirteenth name is \"Barack Obama.\" The thirteenth name is \"Barack Obama.\" The thirteenth name is \"Barack Obama.\" The thirteenth name is \"Barack Obama.\" The thirteenth name is \"Bar\n",
       "---------------\n",
       "===============================================================\n"
      ]
@@ -375,16 +360,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(2.9608, device='cuda:0')\n",
+      "tensor(2.9607, device='cuda:0')\n",
       "tensor(3.1499, device='cuda:0')\n",
-      "tensor(3.0374, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
+      "tensor(3.0481, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
      ]
     }
    ],
@@ -415,25 +400,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9035582489\n",
-      "tensor(3.1179, device='cuda:0')\n",
-      "tensor(2.9639, device='cuda:0')\n",
-      "tensor(2.9430, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
+      "3066539608\n",
+      "tensor(4.3539, device='cuda:0')\n",
+      "tensor(4.1736, device='cuda:0')\n",
+      "tensor(4.2803, device='cuda:0', grad_fn=<NllLossBackward0>)\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "# dataset = \"pg19\"\n",
-    "dataset = \"openwebtext\"\n",
+    "dataset = \"pg19\"\n",
+    "# dataset = \"openwebtext\"\n",
     "\n",
     "data_dir = os.path.join('data', dataset)\n",
     "train_data = np.memmap(os.path.join(data_dir, 'train.bin'), dtype=np.uint16, mode='r')\n",
@@ -442,7 +427,7 @@
     "print(len(train_data))\n",
     "\n",
     "####-----------------------------------------------------\n",
-    "context_start = 783332\n",
+    "context_start = 7832332\n",
     "input_start = context_start + 256\n",
     "input_end = input_start + 512\n",
     "\n",
@@ -485,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
